--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h1>Mi Primera Página Web</h1>
     <p>Hola mundo como estáis</p>
     <address>Ismael</address>
-    
+    <link rel="icon" href="logo.png">
 </head>
 <body>
 
