--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="icon" href="logo.png">
 </head>
 <body>
-    
+    <img src="logo.png">
     <h1>Mi Primera Página Web</h1>
-    <p>Hola mundo como estáis</p>
+    <p>hola</p>
 </body>
 
 
