--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="logo.png">
 </head>
 <body>
-    <img src="logo.png">
+    <img width="100px" src="logo.png">
     <h1>Mi Primera Página Web</h1>
     <p>hola</p>
 </body>
