--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Título para redes sociales">
+    <meta property="og:description" content="Descripción para redes sociales">
+    <meta property="og:image" content="image.jpg">
+    <meta property="og:url" content="https://ismaxcide.github.io">
     <title>Pagina Web 1</title>
     <link rel="icon" href="logo.png">
+<link rel="stylesheet" href="pagina.css">
 </head>
 <body>
     <h1>Mi Primera Página Web</h1>
