--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Título para redes sociales">
-    <meta property="og:description" content="Descripción para redes sociales">
-    <meta property="og:image" content="image.jpg">
-    <meta property="og:url" content="https://ismaxcide.github.io">
-    <title>Pagina Web 1</title>
-    <link rel="icon" href="logo.png">
-<link rel="stylesheet" href="pagina.css">
+    <title>Coches Deportivos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Mi Primera Página Web</h1>
-    <p>hola</p>
-    <address>Ismael</address>
+    <header>
+        <h1>Coches Deportivos</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Página 1</a></li>
+                <li><a href="index2.html">Página 2</a></li>
+                <li><a href="index3.html">Página 3</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="car">
+            <img src="img/2023_Lamborghini_Aventador_Ultimae.jpg">
+            <div class="description">
+                <h2>Lamborghini Aventador</h2>
+                <p>El Lamborghini Aventador es un coche deportivo que combina un diseño agresivo y un motor V12 de 6.5 litros con 730 caballos de fuerza. Su aceleracion de 0 a 100 km/h en 2.9 segundos lo convierte en un vehículo extraordinario.</p>
+            </div>
+        </section>
+    </main>
 </body>
-
-
-
-
 </html>
