--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <main>
         <h1>Bugatti Chiron</h1>
         <section class="car">
-            <img src="bugatti-chiron-1500.jpg" alt="Bugatti Chiron">
+            <img src="img/bugatti-chiron-1500.jpg" alt="Bugatti Chiron">
             <div class="description">
                 <p>El Bugatti Chiron es un hiperdeportivo de lujo con un motor W16 de 8.0 litros y cuatro turbos, capaz de generar 1.500 CV traducido en 420 km/h. Tiene aerodinámica avanzada y materiales de alta gama.</p>
             </div>
